--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,12 @@
     <string name="crime_solved_label">Solved</string>
     <string name="date_picker_title">Date of crime:</string>
     <string name="new_crime">New crime</string>
+    <string name="show_subtitle">show subtitle</string>
+    <string name="hide_subtitle">hide subtitle</string>
+    <string name="subtitle_format">Crimes - %1$d</string>
+
+    <plurals name="subtitle_plural">
+        <item quantity="one">%1$d crime</item>
+        <item quantity="other">%1$d crimes</item>
+    </plurals>
 </resources>
